--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                                     </div>
 
-                                    <div class="row mx-auto my-5">
+                                    <div class="row mx-auto my-3">
                                         <div class="accordion" id="accordionExample" style="width: 100%">
                                             <div class="card">
                                                 <div class="card-header" id="headingNew">
@@ -350,13 +350,13 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="row mx-auto" style="width: 75%; margin: 10rem auto;">
+                                                        <div class="row mx-auto" style="width: 75%; margin: 4rem auto;">
 
                                                             <div class="row my-2 multistep" style="width:100%;">
                                                                 <div class="col-3 multistep-step complete">
 
                                                                     <div class="progress"><div class="progress-bar"></div></div>
-                                                                    <a href="#" class="multistep-dot-big">12  days</a>
+                                                                    <a href="#" class="multistep-dot-big"></a>
                                                                     <div class="text-center multistep-stepname my-3">Overview</div>
                                                                 </div>
 
@@ -432,8 +432,19 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="card-footer">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <button class="btn btn-cstm btn-block">CANCEL</button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button class="btn btn-success btn-block">CREATE</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
